--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,55 +1,78 @@
-name: Upload Python Package
+name: CD - Release
 
 on:
   release:
     types: [published]
 
-permissions:
-  contents: read
-
 jobs:
-  release-build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Build release distributions
-        run: |
-          python -m pip install build
-          python -m build
-
-      - name: Upload distributions
-        uses: actions/upload-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
-
-  gitlab-publish:
-    runs-on: ubuntu-latest
-    needs:
-      - release-build
+  build:
+    name: External
+    uses: SINTEF/ci-cd/.github/workflows/cd_release.yml@v2.9.2
+    if: github.repository == 'SemanticMatter/mqttelemetry' && startsWith(github.ref, 'refs/tags/v')
     permissions:
-      id-token: write
+      contents: write
+    with:
+      # General
+      # Use a GitHub-hosted runner here due to incompatibility between self-hosted runners and the
+      # push-protected action
+      runner: ubuntu-latest
+      git_username: ${{ vars.CI_CD_GIT_USER }}
+      git_email: ${{ vars.CI_CD_GIT_EMAIL }}
+      release_branch: main
+      system_dependencies: 'cmake make gcc g++ libssl-dev'
+
+      # Python package
+      python_package: true
+      package_dirs: dataspaces_graphs
+      pip_index_url: ${{ vars.GITLAB_PACKAGE_REGISTRY_URL }}/simple
+      install_extras: "[dev]"
+      python_version_build: "3.10"
+      build_libs: flit
+      build_cmd: "flit build"
+      build_dir: "dist"
+      changelog_exclude_labels: skip-changelog,duplicate,question,invalid,wontfix
+      publish_on_pypi: false
+      upload_distribution: true
+      version_update_changes_separator: ","
+      version_update_changes: |
+        {package_dir}/__init__.py,__version__ *= *(?:'|\").*(?:'|\"),__version__ = \"{version}\"
+        prepare_testing.sh,:pytest-.* --target,:pytest-{version} --target
+        .github/workflows/ci_tests.yml,:pytest-.*,:pytest-{version}
+
+      # Documentation
+      update_docs: false
+
+    secrets:
+      PAT: ${{ secrets.SEMANTICMATTER_PAT }}
+
+  publish:
+    name: Publish to SINTEF GitLab
+    needs: build
+    # Use a GitHub-hosted runner here due to incompatibility between self-hosted runners and the
+    # push-protected action
+    runs-on: ubuntu-latest
+
+    # environment:
+    #   name: GitLab
+    #   url: ${{ vars.GITLAB_PACKAGE_URL }}
 
     steps:
-      - name: Retrieve release distributions
+      - name: Download distribution
         uses: actions/download-artifact@v4
         with:
-          name: release-dists
-          path: dist/
+          name: dist  # The artifact will always be called 'dist'
+          path: dist
 
-      - name: Install Twine
-        run: python -m pip install twine
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          # The path to the distribution to upload
+          packages-dir: dist
+          repository-url: ${{ vars.GITLAB_PACKAGE_REGISTRY_URL }}
+          user: ${{ secrets.DEPLOY_TOKEN_USERNAME }}
+          password: ${{ secrets.DEPLOY_TOKEN_PASSWORD }}
 
-      - name: Publish release distributions to GitLab PyPI
+      - name: Summary
         run: |
-          twine upload \
-            --repository-url https://gitlab.sintef.no/api/v4/projects/17883/packages/pypi \
-            -u __token__ \
-            -p "${{ secrets.CI_JOB_TOKEN }}" \
-            dist/*
+          echo "Published to SemanticMatter @ SINTEF GitLab"
+          echo "See package at: ${{ vars.GITLAB_PACKAGE_URL }}"
