--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,8 +24,8 @@ repos:
     - id: end-of-file-fixer
     - id: mixed-line-ending
       exclude: ^CHANGELOG.md$
-    - id: name-tests-test
-      args: ["--pytest-test-first"]
+    # - id: name-tests-test
+    #   args: ["--pytest-test-first"]
     - id: trailing-whitespace
       args: [--markdown-linebreak-ext=md]
       exclude: ^CHANGELOG.md$
@@ -49,7 +49,7 @@ repos:
       exclude: ^CHANGELOG.md$
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.8
+    rev: v0.12.9
     hooks:
     - id: ruff-check
       name: ruff
