--- a/.github/workflows/cd_release.yml
+++ b/.github/workflows/cd_release.yml
@@ -36,7 +36,7 @@ jobs:
       update_docs: false
 
     secrets:
-      PAT: ${{ secrets.SEMANTICMATTER_PAT }}
+      PAT: ${{ secrets.BOT_PAT }}
 
   gitlab-publish:
     name: Publish to SINTEF GitLab
