--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ requires-python = "~=3.10"
 dynamic = ["version"]
 
 dependencies = [
-    "pydantic~=2.11",
     "paho-mqtt~=2.1",
-    "starlette~=0.47.2",
+    "pydantic>=2.11",
+    "starlette>=0.47.2",
 ]
 
 [project.optional-dependencies]
